# docs/swagger.yaml
@@ -1,4 +1,18 @@
 definitions:
+  v1.ChangePasswordRequest:
+    properties:
+      newPassword:
+        example: "1234567890123"
+        maxLength: 72
+        minLength: 12
+        type: string
+      oldPassword:
+        example: "123456789012"
+        type: string
+    required:
+    - newPassword
+    - oldPassword
+    type: object
   v1.GetProfileResponse:
     properties:
       code:
@@ -159,6 +173,30 @@ paths:
       security:
       - Bearer: []
       summary: 获取用户信息
+      tags:
+      - 用户模块
+  /user/password:
+    put:
+      consumes:
+      - application/json
+      description: 已登录用户使用旧密码修改为新密码
+      parameters:
+      - description: params
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/v1.ChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.Response'
+      security:
+      - Bearer: []
+      summary: 修改当前用户密码
       tags:
       - 用户模块
 securityDefinitions:
